--- a/project/.gitignore
+++ b/project/.gitignore
@@ -1,3 +1,19 @@
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+
 # Ignore Play! working directory #
 bin/
 /db
@@ -13,4 +29,4 @@ test-result
 server.pid
 *.eml
 /dist/
-.cache
+.cache    
