--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/"
-db.default.user=postgres
-db.default.password=;ahepfgkdnt9
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/hufs-planner"
+db.default.username=hufs-planner
+db.default.password="poXq1U6n3iJ7AYJWGRxyk7CArFqQzmdrXL7avxD4MAXqeC8u4cVeNTNxwm"
 
 # Evolutions
 # ~~~~~
