New project from play-silhouette-template

--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -5,53 +5,61 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="%APPLICATION_SECRET%"
+play.crypto.secret="aioehfoiahweofij"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+play.i18n.langs=["en","ko"]
 
-# Global object class
+# Registers the request handler
 # ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
+play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
 
-# Router
+# Registers the filters
 # ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
+play.http.filters = "utils.Filters"
 
-# Database configuration
+# The application DI modules
 # ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-include "db.conf"
+play.modules.enabled += "modules.BaseModule"
+play.modules.enabled += "modules.JobModule"
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.enabled += "play.api.libs.mailer.MailerModule"
 
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
 
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
+# Akka config
+akka {
+  loglevel = "INFO"
+  jvm-exit-on-fatal-error=off
 
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
+  # Auth token cleaner
+  quartz.schedules.AuthTokenCleaner {
+    expression = "0 0 */1 * * ?"
+    timezone = "UTC"
+    description = "cleanup the auth tokens on every hour"
+  }
+}
 
-# Root logger:
-logger.root=ERROR
+# Play mailer
+play.mailer {
+  host = "posteo.de"
+  port = 587
+  tls = true
+  user = "haemin@posteo.net"
+  password = "Tlr;jco9d;Tlr"
+}
 
-# Logger used by the framework:
-logger.play=INFO
+# Security Filter Configuration - Content Security Policy
+play.filters.headers {
+  contentSecurityPolicy = "default-src 'self';"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' *.fbcdn.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' clef.io cdnjs.cloudflare.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' twitter.com *.xing.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src clef.io;"
+}
 
-# Logger provided to your application:
-logger.application=DEBUG
-
+include "silhouette.conf"
