--- a/project/project/build.properties
+++ b/project/project/build.properties
@@ -1,1 +1,4 @@
-sbt.version=0.13.13
+#Activator-generated Properties
+#Mon Apr 03 18:33:14 KST 2017
+template.uuid=df646457-9b3a-4f30-9636-949ab099150a
+sbt.version=0.13.11
