removed email credentials......

--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -43,13 +43,8 @@ akka {
 }
 
 # Play mailer
-play.mailer {
-  host = "posteo.de"
-  port = 587
-  tls = true
-  user = "haemin@posteo.net"
-  password = "Tlr;jco9d;Tlr"
-}
+include "mail.conf"
+
 
 # Security Filter Configuration - Content Security Policy
 play.filters.headers {
