--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -48,11 +48,11 @@ include "mail.conf"
 
 # Security Filter Configuration - Content Security Policy
 play.filters.headers {
-  contentSecurityPolicy = "default-src 'self';"
+  contentSecurityPolicy = "default-src 'self' ;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' *.fbcdn.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com;"
-  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' clef.io cdnjs.cloudflare.com;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' clef.io cdnjs.cloudflare.com code.jquery.com maxcdn.bootstrapcdn.com 'unsafe-eval' 'unsafe-inline';"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' twitter.com *.xing.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src clef.io;"
 }
