separated course-crawler to different repository

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -16,8 +16,8 @@ server {
     listen 443;
     server_name hufs-planner.com;
 
-    ssl_certificate           /etc/letsencrypt/live//fullchain.pem;
-    ssl_certificate_key       /etc/letsencrypt/live/dotoriair.com/privkey.pem;
+    ssl_certificate           /etc/letsencrypt/live/ #
+    ssl_certificate_key       /etc/letsencrypt/live/
 
     ssl on;
     ssl_session_cache  builtin:1000  shared:SSL:10m;
@@ -34,15 +34,15 @@ server {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
 
-      proxy_pass          http://localhost:3000;
+      proxy_pass          http://localhost:9000;
       proxy_read_timeout  90;
 
-      proxy_redirect      http://localhost:3000 https://localhost;
+      proxy_redirect      http://localhost:9000 https://localhost;
     }
 
     # static asset(.js, .css) 요청(express-static으로 해도 가능하지만, 정적 파일에 대해서는 nginx의 성능이 좋음)
     location ~ \.(js|css)$ {
-      root /home/co2admin/server/main-server/views/public;
+      root /home/
     }
 
     # 정의되지 않은 모든 다른 요청은 거부됩니다.
