Fixed some compiler errors

--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -57,4 +57,9 @@ play.filters.headers {
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src clef.io;"
 }
 
+# Database Config
+slick.dbs.default.driver="slick.driver.H2Driver$"
+slick.dbs.default.db.driver="org.h2.Driver"
+slick.dbs.default.db.url="jdbc:h2:mem:play"
+
 include "silhouette.conf"
