--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -58,8 +58,10 @@ play.filters.headers {
 }
 
 # Database Config
-slick.dbs.default.driver="slick.driver.H2Driver$"
-slick.dbs.default.db.driver="org.h2.Driver"
-slick.dbs.default.db.url="jdbc:h2:mem:play"
+slick.dbs.default.driver="slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
+slick.dbs.default.db.url="jdbc:mysql://localhost/jamioni?characterEncoding=UTF-8"
+slick.dbs.default.db.user="jamioni"
+slick.dbs.default.db.password=""
 
 include "silhouette.conf"
