--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -57,11 +57,5 @@ play.filters.headers {
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src clef.io;"
 }
 
-# Database Config
-slick.dbs.default.driver="slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
-slick.dbs.default.db.url="jdbc:mysql://localhost/jamioni?characterEncoding=UTF-8"
-slick.dbs.default.db.user="jamioni"
-slick.dbs.default.db.password=""
-
 include "silhouette.conf"
+include "db.conf"
