Starting DAO tests

--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -54,7 +54,7 @@ play.filters.headers {
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com;"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' clef.io cdnjs.cloudflare.com code.jquery.com maxcdn.bootstrapcdn.com 'unsafe-eval' 'unsafe-inline';"
   contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' twitter.com *.xing.com;"
-  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src clef.io;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" child-src clef.io;"
 }
 
 include "silhouette.conf"
