--- a/project/conf/application.conf
+++ b/project/conf/application.conf
@@ -28,6 +28,7 @@ play.modules.enabled += "play.api.libs.mailer.MailerModule"
 
 play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
 play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
+play.modules.disabled += "play.api.db.DBModule"
 
 # Akka config
 akka {
